# axum_ex

./: .env  Cargo.toml  README.md  docker-compose.yml  test-oracle.sh
migrations/: 20230101000000_create_books_table.sql  20230101000001_create_users_table.sql
src/: db.rs  error.rs  handlers.rs.org.1  lib.rs  main.rs  main.rs.org  models.rs.org.1
src/db/: connection.rs  connection_manager.rs  mod.rs  types.rs
src/db/implementations/: mod.rs  mssql.rs  mysql.rs  oracle.rs  oracle_test.rs  postgres.rs
src/handlers/: book_handles.rs  connection_handlers.rs  mod.rs  sql_handlers.rs  user_handlers.rs
src/models/: mod.rs  user_models.rs
src/routes/: book_routes.rs  connection_routes.rs  mod.rs  sql_routes.rs  user_routes.rs
src/utils/: passwd.rs
tests/: mysql_integration_test.rs  oracle_integration_test.rs  postgres_integration_test.rs  sql_integration_test.rs
