[package]
name = "axum-ex"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }

axum = "0.8.1"
dotenv = "0.15.0"
serde_json = "1.0.137"
thiserror = "2.0.11"
hyper = "1.5.2"
tracing-subscriber = "0.3.19"
