[package]
name = "axum-ex"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }

axum = "0.8.1"
dotenv = "0.15.0"
serde_json = "1.0.137"
thiserror = "2.0.11"
hyper = "1.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
tower-http = { version = "0.6.2", features = ["trace"] }
