[package]
name = "axum-ex"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "mysql",
] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
serde = { version = "1.0.217", features = ["derive"] }

axum = { version = "0.8.3", features = ["macros"] }
dotenv = "0.15.0"
serde_json = "1.0.137"
thiserror = "2.0.11"
hyper = "1.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
tower-http = { version = "0.6.2", features = ["trace"] }
base64ct = {version = "1.6.0", features = ["alloc"]}
sha2 = {version = "0.10.8", default-features = false }
uuid = {version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
async-trait = "0.1.77"
redis = { version = "0.24.0", features = ["tokio-comp"] }
oracle = { version = "0.6.3", features = ["chrono"] }
tiberius = "0.12.0"
futures = "0.3.30"
